# rust-mlops

./: README.md
.devcontainer/: Dockerfile
candle_app/: Makefile  README.md
candle_app/src/: main.rs
cublas-matmul/: Cargo.toml  build.rs
cublas-matmul/.cargo/: config.toml
cublas-matmul/src/: main.rs
pytorch-vision/: Cargo.toml  README.md
pytorch-vision/src/: main.rs
rust-gpu-translate/: Cargo.toml  README.md
rust-gpu-translate/.github/workflows/: script-check.yml
rust-gpu-translate/examples/: sample_sentences_en.txt  sample_sentences_es.txt
rust-gpu-translate/scripts/: build-with-libtorch.sh  run_heavy_translate.sh  run_translate.ps1  run_translate.sh
rust-gpu-translate/src/: lib.rs  main.rs
rust-gpu-translate/tests/: scripts_executable.rs
